# lines-core

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  coverage.sh  tasks.h
.github/workflows/: build.yml  coverage.yml  format.yml  lint.yml  linux-x86-64.yml  linux.yml  macos-arm.yml
.nvim/: dap_config.lua
include/later/macro/: latermacro.hpp
include/later/tasks/: latertasks.hpp
include/later/temporal/: latertemporal.h
include/later/time/: latertime.h
include/lines/: roadmaps.h  tasks.h  temporal.h  version.h
include/lines/detail/: macro.h
include/lines/roadmaps/: roadmaps.h  roadmaps.hpp  roadmaps_algorithms.hpp
include/lines/tasks/: task.hpp  task_completion.hpp  task_info.hpp  task_repeat.hpp  task_visibility.hpp  tasklist.hpp
include/lines/temporal/: clocks.hpp  date.hpp  datetime.hpp  duration.hpp  temporal.h  timepoint.hpp  timestamp.hpp  timezone.hpp  ymd.hpp
src/: CMakeLists.txt
src/roadmaps/: roadmaps.cpp  roadmaps_algorithms.cpp
src/tasks/: task.cpp  task_completion.cpp
src/temporal/: date.cpp  timepoint.cpp  timestamp.cpp  ymd.cpp
tasks/: latertasks.hpp  tasks.h
tests/: CMakeLists.txt
tests/roadmaps/: roadmap_tests.cpp  roadmaps_algorithms_tests.cpp
tests/tasks/: task_completion_tests.cpp  task_info_tests.cpp  task_repeat_tests.cpp  task_tests.cpp
tests/temporal/: date_tests.cpp  duration_tests.cpp  timepoint_tests.cpp  timestamp_tests.cpp  ymd_tests.cpp
time/: latertime.h
